--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "@fontsource/roboto": "^5.2.8",
     "@mui/icons-material": "^7.3.4",
     "@mui/material": "^7.3.4",
+    "@mui/x-date-pickers": "^8.14.1",
+    "@mui/x-date-pickers-pro": "^8.14.1",
+    "dayjs": "^1.11.18",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
